--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+    <header>
+      <li>About</li>
+      <li>商品一覧</li>
+      <li>新規登録</li>
+      <li>ログイン</li>
+    </header>
     <%= yield %>
   </body>
 </html>
