--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <header>
       <li>About</li>
-      <li>商品一覧</li>
+      <li><%= link_to "商品一覧", admin_items_path %></li>
       <li>新規登録</li>
       <li>ログイン</li>
     </header>
