--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -5,4 +5,5 @@
   <p>商品説明：<%= @item.introduction %></p>
   <p>税込価格（税抜き価格）：<%= @item.add_tax_price.to_s(:delimited)%>(<%= @item.price %>)円</p>
   <p>販売ステータス：<%= @item.is_active ? '販売中' : '販売停止中' %></p>
+  <%= link_to "編集する", edit_admin_item_path %>
 </div>
