--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,22 @@
 
   <body>
     <header>
-      <li>About</li>
-      <li><%= link_to "商品一覧", admin_items_path %></li>
-      <li>新規登録</li>
-      <li>ログイン</li>
+      <% if admin_signed_in? %>
+        <li><%= link_to "商品一覧", admin_items_path %></li>
+        <li>会員一覧</li>
+        <li>注文履歴一覧</li>
+        <li>ログアウト</li>
+      <% elsif customer_signed_in? %>
+        <li>マイページ</li>
+        <li>商品一覧</li>
+        <li>カート</li>
+        <li><%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to "About", homes_about_path %></li>
+        <li>商品一覧</li>
+        <li><%= link_to "新規登録", new_customer_registration_path %></li>
+        <li><%= link_to "ログイン", new_customer_session_path %></li>
+      <% end %>
     </header>
     <%= yield %>
   </body>
