--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,44 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<h2><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h2>
+
+<%= form_with model: @customer, url: admin_customer_path do |f| %>
+
+<div>
+    <h3>名前</h3>
+    <%= f.label :last_name, "（性）" %>
+    <%= f.text_field :last_name %>
+    <%= f.label :first_name, "（名）" %>
+    <%= f.text_field :first_name %>
+  </div>
+
+  <div>
+    <h3>フリガナ</h3>
+    <%= f.label :last_name_kana, "（セイ）" %>
+    <%= f.text_field :last_name_kana %>
+    <%= f.label :first_name_kana, "（メイ）" %>
+    <%= f.text_field :first_name_kana %>
+  </div>
+  
+  <div>
+    <%= f.label :postal_code, "郵便番号（ハイフンなし）"%>
+    <%= f.number_field :postal_code %>
+  </div>
+  
+  <div>
+    <%= f.label :address, "住所" %>
+    <%= f.text_field :address %>
+  </div>
+  
+    <div>
+    <%= f.label :telephone_number, "電話番号（ハイフンなし）" %>
+    <%= f.telephone_field :telephone_number %>
+  </div>
+
+  <div class="field">
+    <%= f.label :email, "メールアドレス" %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit "変更を保存" %>
+  </div>
+<% end %>
