--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -11,7 +11,9 @@
     <% @customers.each do |customer| %>
     <tr>
       <td><%= customer.id %></td>
-      <td><%= customer.first_name %><%= customer.last_name %></td>
+      <td><%= link_to admin_customer_path(customer.id) do %>
+      <%= customer.first_name %><%= customer.last_name %>
+      <% end %></td>
       <td><%= customer.email %></td>
       <td>ステータス未実装</td>
     </tr>
