--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<h2><%= @customer.first_name %><%= @customer.last_name %>さんの会員詳細</h2>
+
+<p>会員ID</p> <%= @customer.id %>
+<p>氏名</p> <%= @customer.first_name%> <%= @customer.last_name%>
+<p>フリガナ</p><%= @customer.first_name_kana%> <%= @customer.last_name_kana%>
+<p>郵便番号</p><%= @customer.postal_code %>
+<p>住所</p><%= @customer.address%>
+<p>電話番号</p><%= @customer.telephone_number%>
+<p>メールアドレス</p><%= @customer.email%>
+<p>会員ステータス</p><p>会員ステータス未実装</p>
+
+<%= link_to "編集する", edit_admin_customer_path %>
