--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,13 @@
         <li>注文履歴一覧</li>
         <li>ログアウト</li>
       <% elsif customer_signed_in? %>
-        <li>マイページ</li>
-        <li>商品一覧</li>
+        <li><%= link_to "マイページ", public_my_page_path(:id) %></li>
+        <li><%= link_to "商品一覧", public_items_path %></li>
         <li>カート</li>
         <li><%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></li>
       <% else %>
-        <li><%= link_to "About", homes_about_path %></li>
-        <li>商品一覧</li>
+        <li><%= link_to "About", public_homes_about_path %></li>
+        <li><%= link_to "商品一覧", public_items_path %></li>
         <li><%= link_to "新規登録", new_customer_registration_path %></li>
         <li><%= link_to "ログイン", new_customer_session_path %></li>
       <% end %>
