--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,6 +1,6 @@
-<h2><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h2>
+<h2>会員情報編集</h2>
 
-<%= form_with model: @customer, url: admin_customer_path do |f| %>
+<%= form_with model: @customer, url: public_customer_path do |f| %>
 
 <div>
     <h3>名前</h3>
@@ -19,7 +19,7 @@
   </div>
   
   <div>
-    <%= f.label :postal_code, "郵便番号（ハイフンなし）"%>
+    <%= f.label :postal_code, "郵便番号"%>
     <%= f.number_field :postal_code %>
   </div>
   
@@ -37,13 +37,8 @@
     <%= f.label :email, "メールアドレス" %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-  
-  <div>
-    <%= f.label :is_deleted, "会員ステータス" %>
-    <%= f.select :is_deleted ,[['退会',true],['有効',false]] %>
-  </div>
 
   <div class="actions">
-    <%= f.submit "変更を保存" %>
+    <%= f.submit "編集内容を保存" %>
   </div>
 <% end %>
