--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -5,6 +5,7 @@
   <p>¥<%= @item.price %>（税込）</p>
   <%= form_with model: @cart_item, url: public_cart_items_path do |f| %>
   <p>個数選択　<%= f.select :amount, *[1..10] %></p>
+  <%= f.hidden_field :item_id, value: @item.id %>
   <p><%= f.submit "カートに入れる" %></p>
   <% end %>
 </div>
